fix total panier

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -137,7 +137,7 @@
     <div class="order-container" style="clear:both;">
         <div class="row order">
             <div class="col-12">
-                <div class="row" th:each="cart : ${carts}">
+                <div class="row product" th:each="cart : ${carts}">
                     <div class="col-9" th:text="|Panier : ${cart.idCart}|">
                         Commande 1
                     </div>
