--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
                         <span class="input-group-text" id="addon-wrapping">@</span>
                     </div>
                     <input class="form-control" id="email" placeholder="Exemple@exemple.com" th:field="*{email}"
-                           type="email"/>
+                           type="email" required/>
                 </div>
             </div>
             <div class="form-group">
@@ -37,7 +37,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fa fa-key"></i></span>
                     </div>
-                    <input class="form-control" id="password" th:field="*{password}" type="password"/>
+                    <input class="form-control" id="password" th:field="*{password}" type="password" required/>
                 </div>
             </div>
             <div class="connexion-box-btn">
