--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -38,8 +38,8 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fa fa-key"></i></span>
                     </div>
-                    <input class="form-control" id="password" name="password" required th:field="*{password}"
-                           type="password"/>
+                    <input class="form-control" id="password" name="password" pattern=".{5,15}" required th:field="*{password}"
+                           type="password" title="Votre mot de passe doit comporter un minimum de 5 et un maximum de 15 caractères."/>
                 </div>
             </div>
             <div class="form-group">
@@ -48,8 +48,8 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fa fa-key"></i></span>
                     </div>
-                    <input class="form-control" id="confirmPassword" name="confirmPassword"
-                           required type="password"/>
+                    <input class="form-control" id="confirmPassword" pattern=".{5,15}" name="confirmPassword"
+                           required type="password" title="Votre mot de passe doit comporter un minimum de 5 et un maximum de 15 caractères."/>
                 </div>
             </div>
             <div class="connexion-box-btn">
