update social media

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -67,15 +67,15 @@
     <div class="col-12 rounded-social-buttons">
         <div class="row footer">
             <div class="col-4 media">
-                <a class="social-button facebook" href="https://www.facebook.com/" target="_blank"><i
+                <a class="social-button facebook" href="https://www.facebook.com/alexandre.cardin" target="_blank"><i
                         class="fab fa-facebook-f"></i></a>
             </div>
             <div class="col-4 media">
-                <a class="social-button linkedin" href="https://www.linkedin.com/" target="_blank"><i
+                <a class="social-button linkedin" href="https://www.linkedin.com/in/alexandre-prieur/" target="_blank"><i
                         class="fab fa-linkedin"></i></a>
             </div>
             <div class="col-4 media">
-                <a class="social-button instagram" href="https://www.instagram.com/" target="_blank"><i
+                <a class="social-button instagram" href="https://www.instagram.com/cardin_alex/" target="_blank"><i
                         class="fab fa-instagram"></i></a>
             </div>
         </div>
