--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -18,6 +18,13 @@ body {
 
 /*--------------------------- // TODO Boutton Connexion ---------------------------*/
 
+.boton-box {
+    border: none;
+    background: none;
+    width: 100%;
+    height: auto;
+}
+
 .boton {
     width: 200px;
     height: 50px;
@@ -155,7 +162,6 @@ body {
     0, 1, 0, 0,
     0, 0, 1, -0.003,
     0, -50, 0, 1);
-
     -webkit-transition: all 500ms cubic-bezier(0.970, 0.000, 0.395, 0.995);
     -moz-transition: all 500ms cubic-bezier(0.970, 0.000, 0.395, 0.995);
     -o-transition: all 500ms cubic-bezier(0.970, 0.000, 0.395, 0.995);
