--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -35,7 +35,7 @@
         <div class="overlay"></div>
         <video autoplay="autoplay" controls="controls" loop="loop" playsinline="playsinline">
             <source src="../static/images/The MT-series is hacking the darkness in 2019.mp4"
-                    th:src="@{images/The MT-series is hacking the darkness in 2019.mp4}" type="video/mp4">
+                    th:src="@{images/MTcut.mp4}" type="video/mp4">
         </video>
     </div>
     <div id="phrase">Sélectionner les produits que vous souhaitez acheter</div>
