--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -33,7 +33,7 @@
     </header>
     <div class="header-video">
         <div class="overlay"></div>
-        <video autoplay="autoplay" controls="controls" loop="loop" playsinline="playsinline">
+        <video autoplay="autoplay" controls="controls" playsinline="playsinline">
             <source src="../static/images/The MT-series is hacking the darkness in 2019.mp4"
                     th:src="@{images/MTcut.mp4}" type="video/mp4">
         </video>
